# mlfoundry-examples

./: .gitignore  README.md  flight delay.ipynb  pyproject.toml  requirements.txt
examples/: examples_requirements.txt  load_runs.ipynb  mlflow_apis.ipynb  run_examples.sh
examples/churn_prediction/: customer-churn-prediction.ipynb
examples/huggingface_transformers/: tweet_eval_emotion_text_classification.ipynb
examples/pytorch/: ca_housing_regression.ipynb  epochs-5.features.json  epochs-5.model.pth  epochs-5.optim.pth  pytorch_train.ipynb  sample_regression.ipynb
examples/sklearn/: Gaussian_Process.ipynb  boston_train.ipynb  breast_cancer_classification.ipynb  ca_housing_regression-Copy1.ipynb  ca_housing_regression.ipynb  call_center_timeseries.ipynb  cancer_train.ipynb  diabetes_regression.ipynb  diabetes_train.ipynb  iris_classification.ipynb  iris_train.ipynb  wine_classification.ipynb  wine_train.ipynb
examples/tensorflow/: mnist-image-classification.ipynb  sentiment_analysis.ipynb
examples/xgboost/: titanic_survival_classification.ipynb
raw-examples/huggingface_transformers/: tweet_eval_emotion_text_classification.ipynb
raw-examples/pytorch/: ca_housing_regression.ipynb  sample_regression.ipynb
raw-examples/sklearn/: breast_cancer_classification-1.ipynb  breast_cancer_classification.ipynb  ca_housing_regression.ipynb  call_center_timeseries.ipynb  diabetes_regression.ipynb  iris_classification.ipynb  wine_classification.ipynb
raw-examples/tensorflow/: sentiment_analysis.ipynb
raw-examples/xgboost/: titanic_survival_classification.ipynb
