[tool.poetry]
name = "mlfoundry-examples"
version = "0.1.0"
description = "Examples for MLFoundry"
authors = ["Rizwan <f.mohamedrizwan@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
mlfoundry = "^0.3.33"
pandas = "^1.1.0"
mlflow = "^1.24.0"
numpy = "^1.21.0"
scipy = "^1.2.0"
seaborn = "^0.11.2"
torch = "^1.11.0"
tensorflow = "^2.8.0"
scikit-learn = "^0.24.2"
shap = "^0.40.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
